--- a/front/cadastro/style_cadastro.css
+++ b/front/cadastro/style_cadastro.css
@@ -1,18 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Kavoon&display=swap');
 
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
     body{
         /* iPhone 13 / 13 Pro - 2 */
         
         position: relative;
-        width: 390px;
-        height: 844px;
+        width: 430px;
+        height: 932px;
         
         background: linear-gradient(180deg, #f87901 62.5%, #f5ae2b 100%);
         
@@ -123,9 +116,9 @@
         /* Rectangle 5 */
         
         
-        background: rgba(0, 26, 255, 0.34);
+        background: rgba(255, 0, 0, 0.34);
         border-radius: 20px;
-        border-color: rgba(0, 26, 255, 0);
+        border-color: rgba(255, 128, 0, 0);
         /* Criar */
         
         
@@ -139,4 +132,19 @@
         color: #FFFFFF;
         
         
+    }
+
+    #funcao {
+        appearance: none; 
+        background-color: #ff7e00;
+        border: 2px solid white;
+        color: white;
+        padding: 10px;
+        font-size: 1.2em;
+        font-weight: bold;
+        border-radius: 5px;
+        width: 200px;
+        text-align: center;
+        cursor: pointer;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
