--- a/front/login/style.css
+++ b/front/login/style.css
@@ -12,8 +12,8 @@
         /* iPhone 13 / 13 Pro - 1 */
         
         position: relative;
-        width: 390px;
-        height: 844px;
+        width: 430px;
+        height: 932px;
         
         background: linear-gradient(180deg, #f87901 62.5%, #f5ae2b 100%);
         
@@ -22,12 +22,14 @@
     #entrar{
         /* Rectangle 4 */
         
-        position: absolute;
-        left: 35%;
+        position: relative;
+        left: 17vh;
         right: 40%;
-        top: 80%;
+        top: 150vw;
         bottom: 15%;
         justify-content: center;
+        width: 30vw;
+        height: 5vh;
         
         background: rgba(255, 0, 0, 0.34);
         border-radius: 20px;
@@ -51,10 +53,12 @@
         /* Rectangle 3 */
     
         position: absolute;
-        left: 25%;
+        left: 14vh;
         right: 30%;
-        top: 90%;
+        top: 190vw;
         bottom: 2%;
+        width: 40vw;
+        height: 10vh;
         
         background: rgba(255, 0, 0, 0.15);
         border-radius: 20px;
@@ -80,8 +84,8 @@
     
     position: absolute;
     width: 33vh;
-    left: calc(50% - 291px/2 - 0.5px);
-top: 85.6vh;
+    left: 8vh;
+    top: 175vw;
 
 font-family: 'Kavoon';
 font-style: normal;
@@ -102,8 +106,8 @@ color: #f8cca8;
     position: absolute;
     width: 16vh;
     height: 50vh;
-    left: calc(50% - 139px/2 - 0.5px);
-    top: 58vh;
+    left: 16vh;
+    top: 90vw;
     justify-content: center;
     
     font-family: 'Kavoon';
@@ -122,10 +126,10 @@ color: #f8cca8;
     /* Senha: */
     
     position: absolute;
-    width: 16vh;
-    height: 50vh;
-    left: calc(50% - 139px/2 - 0.5px);
-    top: 66vh;
+    width: 10vw;
+    height: 10vh;
+    left: 20vh;
+    top: 110vw;
     justify-content: center;
     
     font-family: 'Kavoon';
@@ -147,10 +151,10 @@ color: #f8cca8;
     box-sizing: border-box;
     
     position: absolute;
-    width: 26vh;
+    width: 55vw;
     height: 3vh;
     left: calc(50% - 214px/2);
-    top: 523px;
+    top: 100vw;
     justify-content: center;
     
     background: #FFFFFF;
@@ -159,16 +163,16 @@ color: #f8cca8;
     
 }
 
-#senha{
+#password{
     /* Rectangle 2 */
     
     box-sizing: border-box;
     
     position: absolute;
-    width: 26vh;
+    width: 55vw;
     height: 3vh;
     left: calc(50% - 214px/2);
-    top: 70.3vh;
+    top: 120vw;
     justify-content: center;
     
     background: #FFFFFF;
@@ -181,10 +185,10 @@ color: #f8cca8;
     /* Design sem nome (5) 1 */
     
     position: absolute;
-width: 186px;
-height: 174px;
-left: calc(50% - 186px/2);
-top: 109px;
+width: 30vw;
+height: 14vh;
+left: 35%;
+top: 35vw;
 
 }
 
@@ -192,10 +196,10 @@ top: 109px;
     /* Seja bem vindo ao: */
     
     position: absolute;
-    width: 289px;
+    width: 30vh;
     height: 41px;
     left: calc(50% - 289px/2 - 0.5px);
-    top: 48px;
+    top: 10vw;
     
     font-family: 'Kavoon';
     font-style: normal;
@@ -212,10 +216,10 @@ top: 109px;
     /* RIVERMAP */
     
     position: absolute;
-    width: 273px;
+    width: 30vh;
     height: 41px;
     left: calc(50% - 273px/2 - 0.5px);
-    top: 299px;
+    top: 65vw;
     
     font-family: 'Kavoon';
     font-style: normal;
@@ -229,3 +233,21 @@ top: 109px;
     
     }
 /* } */
+
+#funcao {
+    appearance: none; 
+    background-color: #ff7e00;
+    border: 2px solid white;
+    color: white;
+    padding: 10px;
+    font-size: 1.2em;
+    font-weight: bold;
+    border-radius: 5px;
+    width: 50vw;
+    height: 05vh;
+    top: 50vh;
+    height: 10vh;
+    text-align: center;
+    cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
