--- a/front/pagsexercicios/exercicios.css
+++ b/front/pagsexercicios/exercicios.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=New+Amsterdam&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Leckerli+One&family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&display=swap');
+
+
 body {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: linear-gradient(to bottom, #ff7e00, #ffe8e8);
     font-family: Arial, sans-serif;
     margin: 0;
 }
@@ -17,7 +20,10 @@ body {
 
     text-align:center;
     font-size:xx-large;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+    font-family: "Leckerli One", system-ui;
+    font-style: normal;
+
+
 }
 #descricao{
     position: absolute;
