--- a/front/comeco/comeco.css
+++ b/front/comeco/comeco.css
@@ -10,8 +10,8 @@ body{
     position: relative;
     width: 430px;
     height: 932px;
-    
-    background: linear-gradient(180deg, #f87901 62.5%, #f5ae2b 100%);
+/*     
+    background: linear-gradient(180deg, #f87901 62.5%, #f5ae2b 100%); */
     
 }
     #criar{
