--- a/front/login/style.css
+++ b/front/login/style.css
@@ -13,9 +13,15 @@
         /* iPhone 13 / 13 Pro - 1 */
         
         position: relative;
-        width: 430px;
-        height: 932px;
-        
+        width: 50vh;
+        height: 80vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background: linear-gradient(to bottom,  #f9a53e,  #ff8d55);
+        font-family: Arial, sans-serif;
+        margin: 0;
     }
     
     #entrar{
@@ -48,33 +54,37 @@
 
     #fsc{
         /* Rectangle 3 */
-    
         position: absolute;
-        left: 14vh;
-        right: 30%;
-        top: 190vw;
-        bottom: 2%;
+        left: 50%;
+        top: 190vw; /* Mantém a posição vertical */
         width: 40vw;
         height: 10vh;
         
-        border: 2px solid #ffc0b9 !important;
+        border: 2px solid rgba(255, 192, 185, 1);
         background: rgba(255, 0, 0, 0.15);
         border-radius: 20px;
-        border-color: rgba(0, 26, 255, 0);
-        
-        /* Faça o seu cadastro */
-
-        font-family: "Leckerli One", cursive;        
-        font-style: normal;
-        font-weight: 400;
+        font-family: "Leckerli One", cursive;
         font-size: 24px;
         line-height: 30px;
         text-align: center;
-        justify-content: center;
-        
         color: #f8cca8;
-        
-        
+        transform: translateX(-50%); 
+            position: absolute;
+    /* left: 14vh;
+    right: 30%;
+    top: 190vw;
+    width: 40vw;
+    height: 10vh;
+
+    border: 2px solid rgba(255, 192, 185, 1); 
+    background: rgba(255, 0, 0, 0.15);
+    border-radius: 20px;
+    font-family: "Leckerli One", cursive;
+    font-size: 24px;
+    line-height: 30px;
+    text-align: center;
+
+    color: #f8cca8; */
     }
 
 #npl{
@@ -104,7 +114,7 @@ color: #f8cca8;
     position: absolute;
     width: 16vh;
     height: 50vh;
-    top: 90vw;
+    top: 90vw;  
     justify-content: center;
     
     font-family: "Lobster", sans-serif;
@@ -130,12 +140,12 @@ color: #f8cca8;
     
     font-family: "Lobster", sans-serif;
     font-style: normal;
-font-weight: 400;
-font-size: 20px;
-line-height: 25px;
-text-align: center;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 25px;
+    text-align: center;
 
-color: #f8cca8;
+    color: #f8cca8;
 
 
 }
