--- a/front/pag1/pag1.css
+++ b/front/pag1/pag1.css
@@ -7,6 +7,16 @@
     box-sizing: border-box;
 }
 
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background: linear-gradient(to bottom,  #f9a53e,  #ff8d55);
+    font-family: Arial, sans-serif;
+    margin: 0;
+}
+
 
 #logo{    
     position: absolute;
